plugins {
    id("net.ltgt.errorprone") version "3.0.1"
    id 'com.diffplug.spotless' version '6.25.0'
}

apply plugin: 'java'

repositories {
    mavenLocal()
    mavenCentral()
}

spotless {
    java {
        googleJavaFormat('1.17.0') // or latest compatible with Java 17
        target 'src/**/*.java'
    }
}

group = 'com.google.code.gson'
version = '2.8.6-SNAPSHOT'

sourceCompatibility = 1.17
targetCompatibility = 1.17

sourceSets.main.java.exclude("**/module-info.java")
dependencies {
    testImplementation "junit:junit:4.12"

    annotationProcessor "com.uber.nullaway:nullaway:0.12.4-SNAPSHOT"
    annotationProcessor "edu.ucr.cs.riple.annotator:annotator-scanner:1.3.16-SNAPSHOT"
    implementation "edu.ucr.cs.riple.annotator:annotation-util:1.3.16-SNAPSHOT"
    implementation "com.google.code.findbugs:jsr305:3.0.2"
    errorprone "com.google.errorprone:error_prone_core:2.35.1"
    errorproneJavac "com.google.errorprone:javac:9+181-r4173-1"
    implementation "com.uber.nullaway:nullaway-annotations:0.12.4-SNAPSHOT"
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
        '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
        '--add-reads', 'com.google.gson=ALL-UNNAMED'
    ]
}
def scanner_path = project.rootProject.projectDir.toString() + "/annotator-out/scanner.xml"
def nullaway_path = project.rootProject.projectDir.toString() + "/annotator-out/nullaway.xml"
import net.ltgt.gradle.errorprone.CheckSeverity
tasks.withType(JavaCompile) {
    options.errorprone.disableAllChecks = true
    // remove the if condition if you want to run NullAway on test code
    if (!name.toLowerCase().contains("test")) {
        options.errorprone {
            check("NullAway", CheckSeverity.OFF)
            check("AnnotatorScanner", CheckSeverity.OFF)
            option("NullAway:AnnotatedPackages", "com.google.gson")
            option("NullAway:SerializeFixMetadata", "true")
            option("NullAway:FixSerializationConfigPath", nullaway_path)
            option("AnnotatorScanner:ConfigPath", scanner_path)
        }
        options.compilerArgs << "-Xmaxerrs" << "100000"
        options.compilerArgs << "-Xmaxwarns" << "100000"
    }
}